// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<style>
.S1 {
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.IS1 {
  color: rgba(0,0,0,1.00);
}
</style>

<h3
  aria-level="3"
  className="bigOne css-reset-4rbku5 bigOne css-text-901oao r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55 IS1 S1"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</h3>
`;

exports[`2. article summary strapline component 1`] = `
<style>
.S1 {
  font-family: TimesModern-Regular;
  font-size: 19px;
  line-height: 21px;
}

.IS1 {
  color: rgba(0,0,0,1.00);
}
</style>

<h4
  aria-level="4"
  className="css-reset-4rbku5 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-1b6yd1w r-lineHeight-10yl4k r-paddingBottom-1mi0q7o IS1 S1"
  role="heading"
>
  PM hails breakthrough ahead of key Commons vote
</h4>
`;
